[package]
name = "my-web-app"
version = "0.1.0"
edition = "2021"
license = "MIT OR Apache-2.0"
publish = false

[lib]
name = "my_web_app"

[[bin]]
name = "my-web-app"

[features]
default = ["dev"]
dev = ["minijinja/debug"]

[dependencies]
ammonia = { workspace = true }
axum = { workspace = true }
lazy_static = { workspace = true }
minijinja = { workspace = true, default-features = false, features = ["loader", "multi_template"] }
minijinja-autoreload = { workspace = true }
serde = { workspace = true, features = ["derive"] }
tokio = { workspace = true, features = ["macros", "rt-multi-thread"] }
tower-etag-cache = { workspace = true, features = ["const-lru-provider"]}
tower = { workspace = true }
tower-http = { workspace = true, features = ["compression-gzip", "fs", "trace"] }
tracing = { workspace = true }
tracing-subscriber = { workspace = true }
